--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description"
         content="Your home for silk flower arrangements. Rosy Arc offers quality artificial flower arrangements at an affordable price." />
-    <meta name="keywords" content="rosy arc, silk flower arrangements, cemetery flowers, graphic design" />
+    <meta name="keywords" content="rosy arc, silk flower arrangements, cemetery flowers" />
     <meta name="author" content="Rosy Arc" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="images\rosy-arc-favicon.svg" />
@@ -48,6 +48,16 @@
                 <a href="gallery.html" class="navbar-item is-size-4">
                     <p>Gallery</p>
                 </a>
+                <div class="navbar-item is-size-4 is-hoverable has-dropdown">
+                    <p class="navbar-link">
+                        Articles
+                    </p>
+                    <div class="navbar-dropdown">
+                        <a href="diy-cemetery-bouquet.html" class="navbar-item is-size-5">
+                            DIY Cemetery Bouquet
+                        </a>
+                    </div>
+                </div>
                 <a href="about.html" class="navbar-item is-size-4 is-active">
                     <p>About</p>
                 </a>
@@ -61,104 +71,106 @@
         </div>
     </div>
     <!-- end of hero -->
-    <!-- start of inspire-->
-    <section class="section">
-        <div class="container has-text-centered my-6">
-            <h2 class="is-size-2 has-text-weight-bold">The Rosy Arc</h2>
-            <p class="subtitle is-italic">"a memorable passage of time"</p>
-        </div>
-        <!-- start of two columns -->
-        <div class="section">
-            <div class="columns has-text-centered">
-                <div class="column">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-3by2">
-                                <img srcset="images/about/purple-flowers.webp  654w,
+    <main>
+        <!-- start of inspire-->
+        <section class="section">
+            <header class="container has-text-centered my-6">
+                <h2 class="is-size-2 has-text-weight-bold">The Rosy Arc</h2>
+                <p class="subtitle is-italic">"a memorable passage of time"</p>
+            </header>
+            <!-- start of two columns -->
+            <div class="section">
+                <div class="columns is-vcentered has-text-centered">
+                    <div class="column">
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-3by2">
+                                    <img srcset="images/about/purple-flowers.webp  654w,
                              images/about/purple-flowers-small.webp 366w" sizes="(max-width: 450px) 366px"
-                                    alt="purple white and red saddle">
-                            </figure>
+                                        alt="purple white and red saddle">
+                                </figure>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="column">
-                    <h3 class="title">Inspiration</h3>
-                    <p class="is-size-4-mobile is-size-3">
-                        An idea about an arrangement comes
-                        immediately whilst looking at the
-                        available flowers. It can come
-                        in the workshop, or at the flower market.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <!-- end of two columns -->
-    </section>
-    <!-- end of inspire -->
-    <!-- start of quality -->
-    <section class="section has-text-light has-background-secondary">
-        <div class="container has-text-centered my-6">
-            <h2 class="is-size-2 has-text-weight-bold">Quality</h2>
-        </div>
-        <!-- start of 2 columns -->
-        <div class="section">
-            <div id="quality" class="columns has-text-centered">
-                <div class="column">
-                    <h3 class="title has-text-light">Flowers</h3>
-                    <p class="is-size-4-mobile is-size-3">
-                        All materials used are for outdoor
-                        weather. From the silk flowers to the glue
-                        used to keep your arrangement together.
-                    </p>
-                </div>
-                <div class="column">
-                    <h3 class="title has-text-light">Materials</h3>
-                    <p class="is-size-4-mobile is-size-3">
-                        Vases are a sturdy flat-bottom plastic
-                        that holds your arrangement in place.
-                        The polystyrene used is commercial grade,
-                        making it resistant to various weather
-                        conditions.
-                    </p>
+                    <div class="column">
+                        <h3 class="title">Inspiration</h3>
+                        <p class="is-size-4-mobile is-size-3">
+                            An idea about an arrangement comes
+                            immediately whilst looking at the
+                            available flowers. It can come
+                            in the workshop, or at the flower market.
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- end of 2 columns -->
-    </section>
-    <!-- end of quality -->
-    <!-- start of delivery -->
-    <section class="section">
-        <div class="container has-text-centered my-6">
-            <h2 class="is-size-2 has-text-weight-bold">Delivery</h2>
-        </div>
-        <!-- start of 2 columns -->
-        <div class="section">
-            <div id="delivery" class="columns has-text-centered">
-                <div class="column">
-                    <h3 class="title">Inventory</h3>
-                    <p class="is-size-4-mobile is-size-3">
-                        New arrangements are uploaded throughout
-                        the week. If you're looking for more products of
-                        a particular design, ask us if we have more
-                        of the flowers in stock.
-                    </p>
-                    <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank"> <button
-                            class="button is-success is-medium my-6">Ebay store</button></a>
-                </div>
-                <div class="column">
-                    <h3 class="title">Shipping</h3>
-                    <p class="is-size-4-mobile is-size-3">
-                        We know the occasion may demand fast delivery.
-                        We look to ship your orders as quickly as
-                        possible. If you are located in the Southeast U.S. your package may arrive
-                        in 1-2 days.
-                    </p>
+            <!-- end of two columns -->
+        </section>
+        <!-- end of inspire -->
+        <!-- start of quality -->
+        <section class="section has-text-light has-background-secondary">
+            <div class="container has-text-centered my-6">
+                <h2 class="is-size-2 has-text-weight-bold">Quality</h2>
+            </div>
+            <!-- start of 2 columns -->
+            <div class="section">
+                <div id="quality" class="columns has-text-centered">
+                    <div class="column">
+                        <h3 class="title has-text-light">Flowers</h3>
+                        <p class="is-size-4-mobile is-size-3">
+                            All materials used are for outdoor
+                            weather. From the silk flowers to the glue
+                            used to keep your arrangement together.
+                        </p>
+                    </div>
+                    <div class="column">
+                        <h3 class="title has-text-light">Materials</h3>
+                        <p class="is-size-4-mobile is-size-3">
+                            Vases are a sturdy flat-bottom plastic
+                            that holds your arrangement in place.
+                            The polystyrene used is commercial grade,
+                            making it resistant to various weather
+                            conditions.
+                        </p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- end of 2 columns -->
-    </section>
-    <!-- end of delivery -->
+            <!-- end of 2 columns -->
+        </section>
+        <!-- end of quality -->
+        <!-- start of delivery -->
+        <section class="section">
+            <div class="container has-text-centered my-6">
+                <h2 class="is-size-2 has-text-weight-bold">Delivery</h2>
+            </div>
+            <!-- start of 2 columns -->
+            <div class="section">
+                <div id="delivery" class="columns has-text-centered">
+                    <div class="column">
+                        <h3 class="title">Inventory</h3>
+                        <p class="is-size-4-mobile is-size-3">
+                            New arrangements are uploaded throughout
+                            the week. If you're looking for more products of
+                            a particular design, ask us if we have more
+                            of the flowers in stock.
+                        </p>
+                        <a class="has-text-light" href="https://www.ebay.com/usr/rosyarc" target="_blank" rel="noopener noreferrer"> <button
+                                class="button is-success is-medium my-6">Ebay store</button></a>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Shipping</h3>
+                        <p class="is-size-4-mobile is-size-3">
+                            We know the occasion may demand fast delivery.
+                            We look to ship your orders as quickly as
+                            possible. If you are located in the Southeast U.S. your package may arrive
+                            in 1-2 days.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- end of 2 columns -->
+        </section>
+        <!-- end of delivery -->
+    </main>
     <!-- go to TOP -->
     <button id="top" class="button has-background-black has-text-light py-4 px-4">Top</button>
     <!-- start of footer -->
@@ -168,11 +180,11 @@
                 <div class="content has-text-centered has-text-light">
                     <p class="is-size-3">Shop</p>
                     <p><a class="has-text-light is-underlined" href="https://www.ebay.com/usr/rosyarc"
-                            target="_blank">Ebay</a></p>
+                            target="_blank" rel="noopener noreferrer">Ebay</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.pinterest.com/ihavearosyarc/"
-                            target="_blank">Pinterest</a></p>
+                            target="_blank" rel="noopener noreferrer">Pinterest</a></p>
                     <p><a class="has-text-light is-underlined" href="https://www.redbubble.com/people/rosyarc/shop"
-                            target="_blank">Redbubble</a></p>
+                            target="_blank" rel="noopener noreferrer">Redbubble</a></p>
                 </div>
             </div>
             <div class="column">
